--- a/MachineMonitorStatus/src/main/webapp/index.html
+++ b/MachineMonitorStatus/src/main/webapp/index.html
@@ -6,10 +6,18 @@
     <link rel="stylesheet" href="css/Style.css" type="text/css" >
 </head>
 <body>
-    <div class="logo">
-       <a href="http://www.midiavox.com.br/"> <img alt="logo midiavox" src="imagens/midiavoxlogo.jpg"> </a>
-        <p>abadabadu</p>
-        
+    <div id="header_container">
+           <a href="http://www.midiavox.com.br/" class="logo"></a>
+
+        <div id = "navegacao">
+            <ul >
+                <li>
+                    <a href="index.html"> <img src="imagens/geral.png">
+                        <span >Geral</span>
+                    </a>
+                </li>
+            </ul>
+        </div>
     </div>
 </body>
 </html>
