--- a/MachineMonitorStatus/src/main/webapp/index.html
+++ b/MachineMonitorStatus/src/main/webapp/index.html
@@ -12,8 +12,15 @@
         <div id = "navegacao">
             <ul >
                 <li>
-                    <a href="index.html"> <img src="imagens/geral.png">
-                        <span >Geral</span>
+                    <a href="index.html" style="margin-right: 70px; color: rgba(255, 11, 11, 0.9);"> <img src="imagens/geral.png"> Geral
+                    </a>
+                </li>
+                <li>
+                    <a href="index.html" style="margin-right: 70px; width: 80px;"> <img src="imagens/monitoring.png"> Monitoramento
+                    </a>
+                </li>
+                <li>
+                    <a href="index.html"> <img src="imagens/editing.png"> Cadastrar
                     </a>
                 </li>
             </ul>
