--- a/MachineMonitorStatus/src/main/webapp/index.html
+++ b/MachineMonitorStatus/src/main/webapp/index.html
@@ -6,24 +6,26 @@
     <link rel="stylesheet" href="css/Style.css" type="text/css" >
 </head>
 <body>
-    <div id="header_container">
-           <a href="http://www.midiavox.com.br/" class="logo"></a>
+    <div id="principal">
+        <div id="header_container">
+               <a href="http://www.midiavox.com.br/" class="logo"><img src="imagens/midiavoxlogo.png" width="45px"></a>
 
-        <div id = "navegacao">
-            <ul >
-                <li>
-                    <a href="index.html" style="margin-right: 70px; color: rgba(255, 11, 11, 0.9);"> <img src="imagens/geral.png"> Geral
-                    </a>
-                </li>
-                <li>
-                    <a href="index.html" style="margin-right: 70px; width: 80px;"> <img src="imagens/monitoring.png"> Monitoramento
-                    </a>
-                </li>
-                <li>
-                    <a href="index.html"> <img src="imagens/editing.png"> Cadastrar
-                    </a>
-                </li>
-            </ul>
+            <div id = "navegacao">
+                <ul >
+                    <li>
+                        <a href="index.html" style="margin-right: 50px; color: rgba(255, 11, 11, 0.9);"> <img src="imagens/geral.png" width="30px"> Geral
+                        </a>
+                    </li>
+                    <li>
+                        <a href="index.html" style="margin-right: 50px; width: 80px;"> <img src="imagens/monitoring.png" width="30px"> Monitoramento
+                        </a>
+                    </li>
+                    <li>
+                        <a href="index.html"> <img src="imagens/editing.png" width="25px"> Cadastrar
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
 </body>
