--- a/MachineMonitorStatus/src/main/webapp/index.html
+++ b/MachineMonitorStatus/src/main/webapp/index.html
@@ -27,6 +27,33 @@
                 </ul>
             </div>
         </div>
+
+        <div id="busca">
+                area de busca
+                
+        </div>
+
+        <div id="table_container">
+            <table id="table">
+                    <tr>
+                        <h2>MÁQUINAS</h2>
+                    </tr>
+                    <tr class="th_names">
+                        <td>ID</td>
+                        <td>IP</td>
+                        <td>OS</td>
+                        <td>STATUS</td>
+                        <td>ÚLTIMO HEARTBEAT</td>
+                        <td>LIMITE MEMÓRIA</td>
+                        <td>LIMITE PROCESSAMENTO</td>
+                        <td>LIMITE DISCO</td>
+                    </tr>
+                <tbody class="list" id="list">
+
+
+                </tbody>
+            </table>
+        </div>
     </div>
 </body>
 </html>
