--- a/MachineMonitorStatus/src/main/webapp/index.html
+++ b/MachineMonitorStatus/src/main/webapp/index.html
@@ -29,7 +29,13 @@
         </div>
 
         <div id="busca">
-                area de busca
+            <div id="filtro">
+                <input id="input" type="text" placeholder="Digite um IP">
+                <button id="search-button"><img src="imagens/pesquisa-de-lupa 1.png"></button>
+            </div>
+            <div>
+                <button id="filter-button">Filtrar</button>
+            </div>
                 
         </div>
 
