--- a/MachineMonitorStatus/src/main/webapp/index.html
+++ b/MachineMonitorStatus/src/main/webapp/index.html
@@ -31,8 +31,9 @@
         <div id="busca">
             <div id="filtro">
                 <input id="input" type="text" placeholder="Digite um IP">
-                <button id="search-button"><img src="imagens/pesquisa-de-lupa 1.png"></button>
+                <button id="search-button"><img src="imagens/pesquisa-de-lupa 1.png" width="20px"></button>
             </div>
+            <input type="date" name="Date" id="date">
             <div>
                 <button id="filter-button">Filtrar</button>
             </div>
