--- a/MachineMonitorStatus/src/main/webapp/index.html
+++ b/MachineMonitorStatus/src/main/webapp/index.html
@@ -21,7 +21,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="index.html"> <img src="imagens/editing.png" width="25px"> Cadastrar
+                        <a href="cadastrar.html"> <img src="imagens/editing.png" width="25px"> Cadastrar
                         </a>
                     </li>
                 </ul>
