--- a/MachineMonitorStatus/src/main/webapp/index.html
+++ b/MachineMonitorStatus/src/main/webapp/index.html
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8">
     <title>Machine Monitor Status</title>
-    <link rel="stylesheet" href="css/Style.css" type="text/css" >
+    <link rel="stylesheet" href="css/Style.css" type="text/css">
 </head>
+
 <body>
     <div id="principal">
         <div id="header_container">
-               <a href="http://www.midiavox.com.br/" class="logo"><img src="imagens/midiavoxlogo.png" width="45px"></a>
+            <a href="http://www.midiavox.com.br/" class="logo"><img src="imagens/midiavoxlogo.png" width="45px"></a>
 
-            <div id = "navegacao">
-                <ul >
+            <div id="navegacao">
+                <ul>
                     <li>
-                        <a href="index.html" style="margin-right: 50px; color: rgba(255, 11, 11, 0.9);"> <img src="imagens/geral.png" width="30px"> Geral
+                        <a href="index.html" style="margin-right: 50px; color: rgba(255, 11, 11, 0.9);"> <img
+                                src="imagens/geral.png" width="30px"> Geral
                         </a>
                     </li>
                     <li>
-                        <a href="index.html" style="margin-right: 50px; width: 80px;"> <img src="imagens/monitoring.png" width="30px"> Monitoramento
+                        <a href="index.html" style="margin-right: 50px; width: 80px;"> <img src="imagens/monitoring.png"
+                                width="30px"> Monitoramento
                         </a>
                     </li>
                     <li>
@@ -37,24 +41,24 @@
             <div>
                 <button id="filter-button">Filtrar</button>
             </div>
-                
+
         </div>
 
         <div id="table_container">
             <table id="table">
-                    <tr>
-                        <h2>MÁQUINAS</h2>
-                    </tr>
-                    <tr class="th_names">
-                        <td>ID</td>
-                        <td>IP</td>
-                        <td>OS</td>
-                        <td>STATUS</td>
-                        <td>ÚLTIMO HEARTBEAT</td>
-                        <td>LIMITE MEMÓRIA</td>
-                        <td>LIMITE PROCESSAMENTO</td>
-                        <td>LIMITE DISCO</td>
-                    </tr>
+                <tr>
+                    <h2>MÁQUINAS</h2>
+                </tr>
+                <tr class="th_names">
+                    <td>ID</td>
+                    <td>IP</td>
+                    <td>OS</td>
+                    <td>STATUS</td>
+                    <td>ÚLTIMO HEARTBEAT</td>
+                    <td>LIMITE MEMÓRIA</td>
+                    <td>LIMITE PROCESSAMENTO</td>
+                    <td>LIMITE DISCO</td>
+                </tr>
                 <tbody class="list" id="list">
 
 
@@ -62,5 +66,8 @@
             </table>
         </div>
     </div>
+
+    <script src="Script/scriptIndex.js"></script>
 </body>
+
 </html>
