--- a/MachineMonitorStatus/src/main/webapp/cadastrar.html
+++ b/MachineMonitorStatus/src/main/webapp/cadastrar.html
@@ -4,24 +4,28 @@
     <meta charset="utf-8">
     <title>Machine Monitor Status</title>
     <link rel="stylesheet" href="css/StyleCadastrar.css" type="text/css" >
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+</head>
 </head>
 <body>
     <div id="principal"><!-- Início Principal-->
         <div id="header_container"><!-- Início Header-->
-               <a href="http://www.midiavox.com.br/" class="logo"><img src="imagens/midiavoxlogo.png" width="45px"></a>
+               <a href="http://www.midiavox.com.br/" class="logo"><img src="imagens/midiavoxlogo.png" width="35px"></a>
 
             <div id = "navegacao">
                 <ul >
                     <li>
-                        <a href="index.html" style="margin-right: 50px; color: rgba(255, 11, 11, 0.9);"> <img src="imagens/geral.png" width="30px"> Geral
+                        <a href="index.html" style="margin-right: 50px; width: 40px;"> <img src="imagens/geral.png" width="23px"> Geral
                         </a>
                     </li>
                     <li>
-                        <a href="index.html" style="margin-right: 50px; width: 80px;"> <img src="imagens/monitoring.png" width="30px"> Monitoramento
+                        <a href="index.html" style="margin-right: 50px; width: 80px;"> <img src="imagens/monitoring.png" width="23px"> Monitoramento
                         </a>
                     </li>
                     <li>
-                        <a href="index.html"> <img src="imagens/editing.png" width="25px"> Cadastrar
+                        <a href="index.html" style="color: rgba(255, 11, 11, 0.9);"> <img src="imagens/editing.png" width="23px"> Cadastrar
                         </a>
                     </li>
                 </ul>
