--- a/MachineMonitorStatus/src/main/webapp/index.html
+++ b/MachineMonitorStatus/src/main/webapp/index.html
@@ -70,11 +70,11 @@
             </div>
             <section id="paginate">
                 <div class="pagination">
-                    <div class="prev">&lt;</div>
+                    <div class="prev">❮</div>
                     <div class="numbers">
                         <div>1</div>
                     </div>
-                    <div class="next">&gt;</div>
+                    <div class="next">❯</div>
                 </div>
             </section>
     </div>
