Adding monitoring page to the main design
re-design the size of components in this page later...

--- a/MachineMonitorStatus/src/main/webapp/index.html
+++ b/MachineMonitorStatus/src/main/webapp/index.html
@@ -23,7 +23,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="index.html" style="margin-right: 50px; width: 80px;"> <img src="imagens/monitoring.png"
+                        <a href="MonitorGeral.html" style="margin-right: 50px; width: 80px;"> <img src="imagens/monitoring.png"
                                 width="23px"> Monitoramento
                         </a>
                     </li>
