--- a/MachineMonitorStatus/src/main/webapp/MonitorGeral.html
+++ b/MachineMonitorStatus/src/main/webapp/MonitorGeral.html
@@ -8,20 +8,20 @@
 <body>
     <div id="principal">
         <div id="header_container">
-               <a href="http://www.midiavox.com.br/" class="logo"><img src="imagens/midiavoxlogo.png" width="45px"></a>
+               <a href="http://www.midiavox.com.br/" class="logo"><img src="imagens/midiavoxlogo.png" width="35px"></a>
 
             <div id = "navegacao">
                 <ul >
                     <li>
-                        <a href="index.html" style="margin-right: 50px; color: rgba(255, 11, 11, 0.9);"> <img src="imagens/geral.png" width="30px"> Geral
+                        <a href="index.html" style="margin-right: 50px; color: rgba(255, 11, 11, 0.9); width: 40px;"> <img src="imagens/geral.png" width="23px"> Geral
                         </a>
                     </li>
                     <li>
-                        <a href="index.html" style="margin-right: 50px; width: 80px;"> <img src="imagens/monitoring.png" width="30px"> Monitoramento
+                        <a href="index.html" style="margin-right: 50px; width: 80px;"> <img src="imagens/monitoring.png" width="23px"> Monitoramento
                         </a>
                     </li>
                     <li>
-                        <a href="cadastrar.html"> <img src="imagens/editing.png" width="25px"> Cadastrar
+                        <a href="cadastrar.html"> <img src="imagens/editing.png" width="23px"> Cadastrar
                         </a>
                     </li>
                 </ul>
