Versão parcialmente finalizada(refatorar coluna com speed/limit)

--- a/MachineMonitorStatus/src/main/webapp/MonitorGeral.html
+++ b/MachineMonitorStatus/src/main/webapp/MonitorGeral.html
@@ -17,7 +17,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="index.html" style="margin-right: 50px; width: 80px;"> <img src="imagens/monitoring.png" width="30px"> Monitoramento
+                        <a href="MonitorGeral.html" style="margin-right: 50px; width: 80px;"> <img src="imagens/monitoring.png" width="30px"> Monitoramento
                         </a>
                     </li>
                     <li>
@@ -27,11 +27,13 @@
                 </ul>
             </div>
         </div>
-
-        <div id="table_container">
+	</div>
+        	<div id="table_container">
             <table id="table">
-                    <tr>
+                     <tr>
+                     
                         <h2>MONITORAMENTO GERAL</h2>
+                        
                     </tr>
                     <tr class="th_names">
                         <td>ID</td>
@@ -45,13 +47,20 @@
                         <td>MONITOR MEMÓRIA</td>
                         <td>MONITOR DISCO</td>
                     </tr>
-                <tbody class="list" id="list">
-
-
-                </tbody>
-            </table>
-        </div>
-    </div>
+                	<tbody class="list" id="list">
+                	</tbody>
+    			</table>
+        	</div>
+        	 <section id="paginate">
+                <div class="pagination">
+                    <div class="prev">❮</div>
+                    <div class="numbers">
+                        <div>1</div>
+                    </div>
+                    <div class="next">❯</div>
+                </div>
+             </section>
+   
     <script src="js/main.js"></script>
 </body>
 </html>
