--- a/MachineMonitorStatus/src/main/webapp/cadastrar.html
+++ b/MachineMonitorStatus/src/main/webapp/cadastrar.html
@@ -23,7 +23,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="index.html" style="margin-right: 50px; width: 80px;"> <img src="imagens/monitoring.png" width="23px"> Monitoramento
+                        <a href="MonitorGeral.html" style="margin-right: 40px; width: 90px;"> <img src="imagens/monitoring.png" width="23px"> Monitoramento
                         </a>
                     </li>
                     <li>
