font style change

--- a/MachineMonitorStatus/src/main/webapp/MonitorGeral.html
+++ b/MachineMonitorStatus/src/main/webapp/MonitorGeral.html
@@ -4,6 +4,11 @@
     <meta charset="utf-8">
     <title>Machine Monitor Status</title>
     <link rel="stylesheet" href="css/StylesMonitorGeral.css" type="text/css" >
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="principal">
